# RustTraining

TodoList/: Cargo.toml
TodoList/src/: app.rs  main.rs
TodoList/src/TodoList/: action_types.rs  mod.rs
cli-utilities/: Cargo.toml
cli-utilities/src/: main.rs
cli_utilities/: Cargo.toml  test1.txt  test2.txt
cli_utilities/src/: main.rs
rust-book/: Cargo.toml
rust-book/src/: main.rs
rust_examples/: Dockerfile
rust_examples/src/: main.rs
todo_list/: Cargo.toml  Dockerfile  my_db.db  todos.db
todo_list/src/: main.rs
todo_list/src/app/: app.rs  input_mode.rs  mod.rs
todo_list/src/database/: database.rs  item.rs  mod.rs
