[package]
name = "todo_list"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
color-eyre = "0.6"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
tui = "0.19.0"
dialoguer = "0.11.0"
console = "0.15.11"
